put URL construction into a function so it can be separated out if we ever want to support bootstrapping

--- a/index.html
+++ b/index.html
@@ -95,11 +95,16 @@ function doQuery() {
 		url = 'json://' + object;
 
 	} else {
-		url = 'https://rdap.org/' + typeval + '/' + object;
+		url = getRDAPURL(typeval, object);
 
 	}
 
 	sendQuery(url);
+}
+
+// construct an RDAP URL for the given object
+function getRDAPURL(typeval, object) {
+	return 'https://rdap.org/' + typeval + '/' + object;
 }
 
 // given a URL, injects that URL into the query input,
